# energy-mcp

./: Cargo.toml  LAUNCH.md  POSITIONING.md  README.md  ROADMAP.md
chat-backend/: handler.py
chat-backend/.aws-sam/: build.toml
landing-page/: index.html
landing-page/blog/: carbon-intensity-germany-real-time.html  cheapest-ev-charging-window-germany.html  home-assistant-electricity-prices-no-integration.html  index.html
scripts/: create-key.sh
src/: auth.rs  awattar.rs  entsoe.rs  main.rs  mcp.rs
src/tools/: carbon_intensity.rs  cheapest_window.rs  compare_tariffs.rs  energy_cost.rs  energy_prices.rs  gas_prices.rs  generation_mix.rs  mod.rs  price_forecast.rs  price_stats.rs  price_trends.rs  spot_prices.rs
