[package]
name = "energy-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for European energy market data — electricity spot prices, generation mix, and gas prices"

[dependencies]
# AWS Lambda
lambda_http = "1.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# HTTP client for upstream APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XML parsing (ENTSO-E API)
quick-xml = { version = "0.36", features = ["serialize"] }

# AWS SDK (DynamoDB for auth/rate limiting)
aws-config = "1"
aws-sdk-dynamodb = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"
